added structure of footer

--- a/ldcfood_home.html
+++ b/ldcfood_home.html
@@ -634,11 +634,12 @@
             <div class="top-row">
                 <div class="logo-holder">
                     <a href="/" class="logo"><img src="assets/images/logo.svg" width="148" hweight="257"  alt="L.D.C. FOODS"></a>
-                    <span class="copy">LDC Food © 2017 <br> 
-Mentions légales</span>
+                    <span class="copy"><a href="#">LDC Food</a> © 2017 <br> Mentions légales</span>
                 </div>
-                <div class="contact-holder">    
-                         <a href="#" class="video-link">
+                <div class="contact-row">
+                    <h4 class="h4">CONTACT</h4>
+                    <div class="contact-links">
+                        <a href="#" class="video-link">
                             <div class="video-box">
                                 <video preload="auto" autoplay>
                                     <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
@@ -648,16 +649,108 @@ Mentions légales</span>
                                 </video>
                             </div>
                             <div class="descr-box">
-                                
                                 <div class="title-text">
-                                    <strong class="name">Yuan Bichtyan</strong>
-                                    <span class="position">Export Chine</span>
+                                    <strong class="name">MAGALIE LORAND</strong>
+                                    <span class="position">Europe</span>
                                 </div>
-                                <span class="btn btn-contact">  
+                                <span class="btn btn-contact  btn-thin">  
                                 Contactez   
                                 </span>
                             </div>
                         </a>
+                        <a href="#" class="video-link">
+                            <div class="video-box">
+                                <video preload="auto" autoplay>
+                                    <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
+                                    <source src="assets/videos/video-gallery/video1.3gp" type="video/3gp">
+                                    <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
+                                    <source src="assets/videos/video-gallery/video1.ogv" type="video/ogg">
+                                </video>
+                            </div>
+                            <div class="descr-box">
+                                <div class="title-text">
+                                    <strong class="name">LAETITIA BODIN</strong>
+                                    <span class="position">Afrique, Océanie</span>
+                                </div>
+                                <span class="btn btn-contact  btn-thin">  
+                                Contactez   
+                                </span>
+                            </div>
+                        </a>
+                        <a href="#" class="video-link">
+                            <div class="video-box">
+                                <video preload="auto" autoplay>
+                                    <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
+                                    <source src="assets/videos/video-gallery/video1.3gp" type="video/3gp">
+                                    <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
+                                    <source src="assets/videos/video-gallery/video1.ogv" type="video/ogg">
+                                </video>
+                            </div>
+                            <div class="descr-box">
+                                <div class="title-text">
+                                    <strong class="name">LYDIA TOUEILLE</strong>
+                                    <span class="position">Asie, Amerique</span>
+                                </div>
+                                <span class="btn btn-contact btn-thin">  
+                                Contactez   
+                                </span>
+                            </div>
+                        </a>
+                        <a href="#" class="video-link">
+                            <div class="video-box">
+                                <video preload="auto" autoplay>
+                                    <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
+                                    <source src="assets/videos/video-gallery/video1.3gp" type="video/3gp">
+                                    <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
+                                    <source src="assets/videos/video-gallery/video1.ogv" type="video/ogg">
+                                </video>
+                            </div>
+                            <div class="descr-box">
+                                <div class="title-text">
+                                    <strong class="name">LYDIA TOUEILLE</strong>
+                                    <span class="position">Asie, Amerique</span>
+                                </div>
+                                <span class="btn btn-contact  btn-thin">  
+                                Contactez   
+                                </span>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="bottom-row">
+                <div class="col">
+                    <h4 class="h4">SIEGE</h4>
+                    <div class="info">
+                        <address>
+                            Z.I. du Lay
+                            <br> 56660 Saint-Jean-Brevelay
+                            <br> FRANCE
+                        </address>
+                        <a href="tel:330297603388">Tel : +33(0)2 97 60 33 88</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <h4 class="h4">NEWSLETTER</h4>
+                    <div class="info">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                        <form action="#" class="contact-form">
+                            <input type="text" placeholder="S’inscrire à la newsletter">
+                            <button>OK</button>
+                        </form>
+                    </div>
+                </div>
+                 <div class="col">
+                    <h4 class="h4">BUREAU DE VENTE</h4>
+                    <div class="info">
+                        <address>
+                           7 rue du Paradis
+                            <br> 53000 Laval
+                            <br> FRANCE
+                        </address>
+                        <a href="tel:330243490860">Tel : +33(0)2 43 49 08 60</a>
+                        <a href="tel:330243569426">Fax : +33(0)2 43 53 94 26</a>
+                    </div>
                 </div>
             </div>
         </div>
