added footer desctop

--- a/ldcfood_home.html
+++ b/ldcfood_home.html
@@ -426,7 +426,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
                         <form action="#" class="search-form">
                             <button class="btn btn-search"><i class="icon-search"></i></button>
-                            <input type="text" class="inpt-controll" placeholder="Rechercher...">
+                            <input type="text" required class="inpt-controll" placeholder="Rechercher...">
                         </form>
                     </div>
                     <div class="img-holder"><img class="parallax" src="assets/images/parallax2.jpg" alt="image description"> </div>
@@ -734,9 +734,9 @@
                     <h4 class="h4">NEWSLETTER</h4>
                     <div class="info">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
-                        <form action="#" class="contact-form">
-                            <input type="text" placeholder="S’inscrire à la newsletter">
-                            <button>OK</button>
+                        <form action="#" class="subscribe-form">
+                            <input type="emil" required placeholder="S’inscrire à la newsletter">
+                            <button>ok</button>
                         </form>
                     </div>
                 </div>
