fix bugs on sousgamme page

--- a/ldcfood_sousgamme.html
+++ b/ldcfood_sousgamme.html
@@ -252,24 +252,24 @@
                         <div class="products-grid-holder">
                             <h2 class="h2 decoration">POULET</h2>
                             <ul class="products-list">
-                                <li class="list-item">
-                                    <a data-fancybox data-src="#product-popup" href="javascript:;" class="product-link">
+                                <li data-fancybox data-src="#product-popup" href="javascript:;" class="list-item">
+                                    <div class="product-link">
                                         <img src="assets/images/entier.png" alt="entier">
-                                    </a>
+                                    </div>
                                     <span class="item-name">Entier</span>
                                     <a href="#" class="item-button">Favoris</a>   
                                 </li>
-                                <li class="list-item">
-                                    <a data-fancybox data-src="#product-popup" href="javascript:;" class="product-link">
+                                <li data-fancybox data-src="#product-popup" href="javascript:;" class="list-item">
+                                    <div class="product-link">
                                         <img src="assets/images/filets.png" alt="filets">
-                                    </a>
+                                    </div>
                                     <span class="item-name">Filets</span>
                                     <a href="#" class="item-button">Favoris</a>   
                                 </li>
-                                <li class="list-item">
-                                    <a data-fancybox data-src="#product-popup" href="javascript:;" class="product-link">
+                                <li data-fancybox data-src="#product-popup" href="javascript:;" class="list-item">
+                                    <div class="product-link">
                                         <img src="assets/images/ailes.png" alt="ailes">
-                                    </a>
+                                    </div>
                                     <span class="item-name">Ailes</span>
                                     <a href="#" class="item-button">Favoris</a>   
                                 </li>
@@ -382,6 +382,50 @@
                                         <div class="icons-field">
                                             <i class="icon-i-snow"></i>
                                             <div class="img-holder"><img src="assets/images/logo-small_halal.png" alt="halala"></div>
+                                            <div class="img-holder"><img src="assets/images/logo-small_volaille-francaise.png" alt="Volaille-Francaise"></div>
+                                        </div>   
+                                    </div>
+                                    <div class="popup-info-row">
+                                        <a href="#" class="btn favoris-link">Favoris</a>
+                                        <div class="text-field">
+                                            <strong>Cuisse s/peau</strong>
+                                        </div>
+                                        <div class="icons-field">
+                                            <i class="icon-i-snow"></i>
+                                            <i class="icon-thermometer-outlined-symbol-of-stroke"></i>
+                                            <div class="img-holder"><img src="assets/images/logo-small_volaille-francaise.png" alt="Volaille-Francaise"></div>
+                                        </div>   
+                                    </div>
+                                    <div class="popup-info-row">
+                                        <a href="#" class="btn favoris-link">Favoris</a>
+                                        <div class="text-field">
+                                            <strong>Cuisse s/peau</strong>
+                                        </div>
+                                        <div class="icons-field">
+                                            <i class="icon-i-snow"></i>
+                                            <i class="icon-thermometer-outlined-symbol-of-stroke"></i>
+                                            <div class="img-holder"><img src="assets/images/logo-small_volaille-francaise.png" alt="Volaille-Francaise"></div>
+                                        </div>   
+                                    </div>
+                                    <div class="popup-info-row">
+                                        <a href="#" class="btn favoris-link">Favoris</a>
+                                        <div class="text-field">
+                                            <strong>Cuisse s/peau</strong>
+                                        </div>
+                                        <div class="icons-field">
+                                            <i class="icon-i-snow"></i>
+                                            <i class="icon-thermometer-outlined-symbol-of-stroke"></i>
+                                            <div class="img-holder"><img src="assets/images/logo-small_volaille-francaise.png" alt="Volaille-Francaise"></div>
+                                        </div>   
+                                    </div>
+                                    <div class="popup-info-row">
+                                        <a href="#" class="btn favoris-link">Favoris</a>
+                                        <div class="text-field">
+                                            <strong>Cuisse s/peau</strong>
+                                        </div>
+                                        <div class="icons-field">
+                                            <i class="icon-i-snow"></i>
+                                            <i class="icon-thermometer-outlined-symbol-of-stroke"></i>
                                             <div class="img-holder"><img src="assets/images/logo-small_volaille-francaise.png" alt="Volaille-Francaise"></div>
                                         </div>   
                                     </div>
