--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
        <ul>
          <li><a href="ldcfood_home.html">LDCFOOD_home</a></li>
          <li><a href="ldcfood_sousgamme.html">LDCFOOD_sousgamme</a></li>
+         <li><a href="ldcfood_nosgammes.html">LDCFOOD_mossgammes</a></li>
        </ul>
     </div>
     
