--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
          <li><a href="ldcfood_home.html">LDCFOOD_home</a></li>
          <li><a href="ldcfood_sousgamme.html">LDCFOOD_sousgamme</a></li>
          <li><a href="ldcfood_nosgammes.html">LDCFOOD_mossgammes</a></li>
+         <li><a href="ldcfood_nosmarques.html">LDCFOOD_nosmarques</a></li>
        </ul>
     </div>
     
