corrected video and paralax

--- a/ldcfood_home.html
+++ b/ldcfood_home.html
@@ -207,36 +207,6 @@
             </div>
         </div>
     </div>
-    <div id="banner-video-poopup" class="hide-content">
-        <video class="video-js" controls preload="auto" data-setup="{}">
-            <source src="assets/videos/test.mp4" type="video/mp4">
-        </video>
-    </div>
-    <div id="manager1-video" class="hide-content">
-        <video class="video-js" controls preload="auto" data-setup="{}">
-            <source src="assets/videos/test.mp4" type="video/mp4">
-        </video>
-    </div>
-    <div id="manager2-video" class="hide-content">
-        <video class="video-js" controls preload="auto" data-setup="{}">
-            <source src="assets/videos/test.mp4" type="video/mp4">
-        </video>
-    </div>
-    <div id="manager3-video" class="hide-content">
-        <video class="video-js" controls preload="auto" data-setup="{}">
-            <source src="assets/videos/test.mp4" type="video/mp4">
-        </video>
-    </div>
-    <div id="manager4-video" class="hide-content">
-        <video class="video-js" controls preload="auto" data-setup="{}">
-            <source src="assets/videos/test.mp4" type="video/mp4">
-        </video>
-    </div>
-    <div id="manager5-video" class="hide-content">
-        <video class="video-js" controls preload="auto" data-setup="{}">
-            <source src="assets/videos/test.mp4" type="video/mp4">
-        </video>
-    </div>
     <main>
         <section class="default-section">
             <div class="container">
@@ -394,25 +364,25 @@
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
                                 <a href="#" class="btn">Lire cet engagement</a>
                             </div>
-                            <div class="img-holder"><img class="parallax" src="assets/images/gallery-parallax1.jpg" alt="image description"> </div>
+                            <div class="img-holder parallax" style="background-image: url(assets/images/gallery-parallax1.jpg)"> </div>
                         </div>
                     </div>
-                    <div>
+  <div>
                         <div class="text-image-holder">
                             <div class="text-holder">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
                                 <a href="#" class="btn">Lire cet engagement</a>
                             </div>
-                            <div class="img-holder"><img class="parallax" src="assets/images/gallery-parallax1.jpg" alt="image description"> </div>
+                            <div class="img-holder parallax" style="background-image: url(assets/images/gallery-parallax1.jpg)"> </div>
                         </div>
                     </div>
-                    <div>
+                      <div>
                         <div class="text-image-holder">
                             <div class="text-holder">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
                                 <a href="#" class="btn">Lire cet engagement</a>
                             </div>
-                            <div class="img-holder"><img class="parallax" src="assets/images/gallery-parallax1.jpg" alt="image description"> </div>
+                            <div class="img-holder parallax" style="background-image: url(assets/images/gallery-parallax1.jpg)"> </div>
                         </div>
                     </div>
                 </div>
@@ -429,18 +399,18 @@
                             <input type="text" required class="inpt-controll" placeholder="Rechercher...">
                         </form>
                     </div>
-                    <div class="img-holder"><img class="parallax" src="assets/images/parallax2.jpg" alt="image description"> </div>
+                 <div class="img-holder parallax" style="background-image: url(assets/images/parallax2.jpg)"> </div>
                 </div>
             </div>
         </section>
-        <section class="thumb-section">
+        <section class="thumb-section parallax" style="background-image:url(assets/images/thumb-bg.jpg)">
             <div class="container">
                 <h2 class="h2 decoration-center">NOS VALEURS</h2>
                 <div class="thumbs-holder">
                     <div class="circle-thumb">
                         <div class="img-holder">
                             <!--important to set width anh height (inline) in svg image to avoid bug in IE -->
-                            <img src="assets/images/thumb-img1.svg" alt="thimg image description" width="74" height="84">
+                            <img src="assets/images/thumb-img1.svg" alt="thumg image description" width="74" height="84">
                         </div>
                         <div class="text-holder">
                             <strong class="title">Le travail</strong>
@@ -755,6 +725,36 @@
             </div>
         </div>
     </footer>
+    <div id="banner-video-poopup" class="hide-content">
+        <video class="video-js" controls preload="auto" data-setup="{}">
+            <source src="assets/videos/test.mp4" type="video/mp4">
+        </video>
+    </div>
+    <div id="manager1-video" class="hide-content">
+        <video class="video-js" controls preload="auto" data-setup="{}">
+            <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
+        </video>
+    </div>
+    <div id="manager2-video" class="hide-content">
+        <video class="video-js" controls preload="auto" data-setup="{}">
+            <source src="assets/videos/test.mp4" type="video/mp4">
+        </video>
+    </div>
+    <div id="manager3-video" class="hide-content">
+        <video class="video-js" controls preload="auto" data-setup="{}">
+            <source src="assets/videos/test.mp4" type="video/mp4">
+        </video>
+    </div>
+    <div id="manager4-video" class="hide-content">
+        <video class="video-js" controls preload="auto" data-setup="{}">
+            <source src="assets/videos/test.mp4" type="video/mp4">
+        </video>
+    </div>
+    <div id="manager5-video" class="hide-content">
+        <video class="video-js" controls preload="auto" data-setup="{}">
+            <source src="assets/videos/test.mp4" type="video/mp4">
+        </video>
+    </div>
     <img id="video-mask-image" src="assets/images/video-mask.png" alt="poolygon mask for video" style="display:none;">
     <script src="assets/js/vendor.min.js"></script>
     <script src="assets/js/app.js"></script>
