start estampille page

--- a/ldcfood_estampille.html
+++ b/ldcfood_estampille.html
@@ -48,12 +48,38 @@
         </header>
         <div class="banner" style="background-image:url(assets/images/main-banner.jpg)">
             <div class="container">
-                <h1>NOS PRODUITS</h1>
+                <h1>Estampille CE</h1>
             </div>
         </div>
         <main id="main">
             <div id="content">
-            
+                <div class="container mark-interactive">
+                    <h2 class="h2 decoration">COMMENT LES DéCHIFFRER</h2>
+                    <div class="interactive-holder">
+                        <div class="mark-holder">
+                            <div class="m-row">
+                                <span class="m-element m-top">FR</span>
+                                <p class="description d-m-top"><span class="marked">Lorem ipsum dolor</span> sit amet, consectetur 
+                                adipiscing elit, sed do eiusmod tempor 
+                                incididunt ut labore.</p>
+                            </div>
+                            <div class="m-row">
+                                <span class="m-element m-middle-left">44</span>
+                                <p class="description d-m-middle-left">Lorem ipsum dolor sit amet, consectetur 
+                                adipiscing elit, sed do eiusmod tempor 
+                                incididunt <span class="marked">ut labore.</span></p>
+                                <span class="m-element m-middle-center">015</span>
+                                <span class="m-element m-middle-right">056</span>
+                            </div>
+                            <div class="m-row">
+                                <span class="m-element m-bottom">CE</span>
+                            </div>
+<!--                             <p class="description default-text">Lorem ipsum dolor sit amet, consectetur 
+                            adipiscing elit, sed do eiusmod tempor 
+                            incididunt ut labore.</p> -->
+                        </div>
+                    </div>
+                </div>
             </div>
         </main>
         <div class="container">
