--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
          <li><a href="ldcfood_sousgamme.html">LDCFOOD_sousgamme</a></li>
          <li><a href="ldcfood_nosgammes.html">LDCFOOD_mossgammes</a></li>
          <li><a href="ldcfood_nosmarques.html">LDCFOOD_nosmarques</a></li>
+         <li><a href="ldcfood_estampille.html">LDCFOOD_estampille</a></li>
        </ul>
     </div>
     
