add 3 last pages

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
          <li><a href="ldcfood_nosgammes.html">LDCFOOD_mossgammes</a></li>
          <li><a href="ldcfood_nosmarques.html">LDCFOOD_nosmarques</a></li>
          <li><a href="ldcfood_estampille.html">LDCFOOD_estampille</a></li>
+         <li><a href="ldcfood_engagements.html">LDCFOOD_engagements</a></li>
+         <li><a href="ldcfood_contact.html">LDCFOOD_contact</a></li>
        </ul>
     </div>
-    
     <script src="assets/js/vendor.min.js" defer></script>
     <script src="assets/js/app.js" defer></script>
 </body>
