--- a/ldcfood_contact.html
+++ b/ldcfood_contact.html
@@ -36,166 +36,84 @@
                     </div>
                     <ul class="header-nav">
                         <li class="menu-close">&times;</li>
+                        <!--  <li class="current-menu-item"><a href="#">Nos Marques</a></li> -->
                         <li><a href="#">Nos Marques</a></li>
-                        <li class="current-menu-item"><a href="#">Nos Gammes</a></li>
+                        <li><a href="#">Nos Gammes</a></li>
                         <li><a href="#">Estampille CE</a></li>
-                        <li><a href="#">Nos Engagements</a></li>
+                        <li class="current-menu-item"><a href="#">Nos Engagements</a></li>
                         <li><a href="#" class="btn btn-contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
         </header>
-        <div class="banner " style="background-image:url(assets/images/main-banner.jpg)">
+        <div class="banner" style="background-image:url(assets/images/main-banner.jpg)">
             <div class="container">
-                <h1>NOS GAMMES</h1>
+                <h1>CONTACT</h1>
             </div>
         </div>
         <main id="main">
-            <section class="default-section nos-gammes">
-                <div class="container">
-                    <div class="text-holder text-center">
+            <div id="content">
+                <section class="contact-text">
+                    <div class="container">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
                     </div>
-                    <div class="products-box">
-                        <div class="header-row">
-                            <div class="col-head">
-                                <div class="opener"> <i class="icon-i-jam"></i><strong>Conditionnements</strong></div>
-                                <ul class="head-menu">
-                                    <li><a href="#">Vrac</a></li>
-                                    <li><a href="#">Sachet</a></li>
-                                    <li><a href="#">Barquette</a></li>
-                                    <li><a href="#"> Conserv</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-head">
-                                <div class="opener"> <i class="icon-i-lunch"></i><strong>Les élaborées</strong></div>
-                                <ul class="head-menu">
-                                    <li><a href="#">Charcuterie</a></li>
-                                    <li><a href="#">Panés</a></li>
-                                    <li><a href="#">Traiteur</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-head">
-                                <div class="opener"> <i class="icon-i-snow"></i><strong>Conservations</strong></div>
-                                <ul class="head-menu">
-                                    <li><a href="#">Vrac</a></li>
-                                    <li><a href="#">Sachet</a></li>
-                                    <li><a href="#">Barquette</a></li>
-                                    <li><a href="#"> Conserv</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-head">
-                                <div class="opener"> <i class="icon-i-specifiques"></i><strong>Les spécifiques</strong></div>
-                                <ul class="head-menu">
-                                    <li><a href="#">Vrac</a></li>
-                                    <li><a href="#">Sachet</a></li>
-                                    <li><a href="#">Barquette</a></li>
-                                    <li><a href="#"> Conserv</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-head">
-                                <div class="opener"> <i class="icon-i-sertifications"></i><strong>Certifications</strong></div>
-                                <ul class="head-menu">
-                                    <li><a href="#">Vrac</a></li>
-                                    <li><a href="#">Sachet</a></li>
-                                    <li><a href="#">Barquette</a></li>
-                                    <li><a href="#"> Conserv</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="box-row-wrapper">
-                            <div class="opener"> <i class="icon-i-sertifications"></i><strong>Espèces</strong></div>
-                            <div class="box-row">
-                                <div class="col-body">
-                                    <div class="body-box">
-                                        <i class="icon-caille"> </i>
-                                        <strong class="title">Caille</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-oie"> </i>
-                                        <strong class="title">Oie</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-jeune-coq"> </i>
-                                        <strong class="title">Jeune Coq</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
+                </section>
+                <section class="contact-form" style="background-image:url(assets/images/contact-bg.png)">
+                    <div class="container">
+                        <form action="#">
+                            <ul class="radio-box">
+                                <li>
+                                    <input type="radio" id="r-option-1" name="radio-option">
+                                    <label for="r-option-1">Mr</label>
+                                    <div class="check"></div>
+                                </li>
+                                <li>
+                                    <input type="radio" id="r-option-2" name="radio-option">
+                                    <label for="r-option-2">Mme</label>
+                                    <div class="check"></div>
+                                </li>
+                            </ul>
+                            <ul class="inputs-list">
+                                <li>
+                                    <input type="text" class="form-control" placeholder="Nom*:" required>
+                                </li>
+                                <li>
+                                    <input type="text" class="form-control" placeholder="Prénom*:" required>
+                                </li>
+                                <li>
+                                    <input type="email" class="form-control" placeholder="E mail*:" required>
+                                </li>
+                                <li>
+                                    <input type="text" class="form-control" placeholder="Téléphone*:" required>
+                                </li>
+                            </ul>
+                            <ul class="favoris-list">
+                                <div class="f-list-title">
+                                    <img src="assets/images/favorite-mark-stars.svg" alt="favosris">
+                                    <span>Mes produits favoris</span>
                                 </div>
-                                <div class="col-body">
-                                    <div class="body-box">
-                                        <i class="icon-canard"> </i>
-                                        <strong class="title">Canard</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-pintade"> </i>
-                                        <strong class="title">Pintade</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-dinde"> </i>
-                                        <strong class="title">Dinde</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                </div>
-                                <div class="col-body">
-                                    <div class="body-box">
-                                        <i class="icon-caneton"> </i>
-                                        <strong class="title">Сaneton</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-poulet"> </i>
-                                        <strong class="title">Poulet</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-dindon"> </i>
-                                        <strong class="title">Dindon</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                </div>
-                                <div class="col-body">
-                                    <div class="body-box">
-                                        <i class="icon-chapon"> </i>
-                                        <strong class="title">Chapon</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-chevreau"> </i>
-                                        <strong class="title">Chevreau</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-poule"> </i>
-                                        <strong class="title">Poule</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                </div>
-                                <div class="col-body">
-                                    <div class="body-box">
-                                        <i class="icon-lapin"> </i>
-                                        <strong class="title">Lapin</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-coq"> </i>
-                                        <strong class="title">Coq</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-viandes"> </i>
-                                        <strong class="title">Viandes, légumeset produits laitiers</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                </div>
+                                <li>
+                                    <input type="text" class="favoris-option" value="Poulet - cuisse entière">
+                                    <button class="del-btn"></button>
+                                </li>
+                                <li>
+                                    <input type="text" class="favoris-option" value="Poulet - Haut de cuisse">
+                                    <button class="del-btn"></button>
+                                </li>
+                                <li>
+                                    <input type="text" class="favoris-option" value="Cuisse s/peau">
+                                    <button class="del-btn"></button>
+                                </li>
+                            </ul>
+                            <div class="message-field">
+                                <label for="message">Votre message *</label>
+                                <textarea rows="7" name="message" required></textarea>
                             </div>
-                        </div>
+                            <button class="btn" type="submit"><i class="icon-paper-plane"></i><span>Envoyer</span></button>
+                        </form>
                     </div>
-                </div>
-            </section>
+                </section>
+            </div>
         </main>
     </div>
     <footer id="footer">
