--- a/ldcfood_engagements.html
+++ b/ldcfood_engagements.html
@@ -36,166 +36,85 @@
                     </div>
                     <ul class="header-nav">
                         <li class="menu-close">&times;</li>
+                        <!--  <li class="current-menu-item"><a href="#">Nos Marques</a></li> -->
                         <li><a href="#">Nos Marques</a></li>
-                        <li class="current-menu-item"><a href="#">Nos Gammes</a></li>
+                        <li><a href="#">Nos Gammes</a></li>
                         <li><a href="#">Estampille CE</a></li>
-                        <li><a href="#">Nos Engagements</a></li>
+                        <li class="current-menu-item"><a href="#">Nos Engagements</a></li>
                         <li><a href="#" class="btn btn-contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
         </header>
-        <div class="banner " style="background-image:url(assets/images/main-banner.jpg)">
+        <div class="banner" style="background-image:url(assets/images/main-banner.jpg)">
             <div class="container">
-                <h1>NOS GAMMES</h1>
+                <h1>NOS ENGAGEMENTS</h1>
             </div>
         </div>
         <main id="main">
-            <section class="default-section nos-gammes">
-                <div class="container">
-                    <div class="text-holder text-center">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+            <div id="content">
+                <div class="accelerator-block">
+                    <div class="acc-item">
+                        <a href="#section-element-1">La qualité des produits</a>
                     </div>
-                    <div class="products-box">
-                        <div class="header-row">
-                            <div class="col-head">
-                                <div class="opener"> <i class="icon-i-jam"></i><strong>Conditionnements</strong></div>
-                                <ul class="head-menu">
-                                    <li><a href="#">Vrac</a></li>
-                                    <li><a href="#">Sachet</a></li>
-                                    <li><a href="#">Barquette</a></li>
-                                    <li><a href="#"> Conserv</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-head">
-                                <div class="opener"> <i class="icon-i-lunch"></i><strong>Les élaborées</strong></div>
-                                <ul class="head-menu">
-                                    <li><a href="#">Charcuterie</a></li>
-                                    <li><a href="#">Panés</a></li>
-                                    <li><a href="#">Traiteur</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-head">
-                                <div class="opener"> <i class="icon-i-snow"></i><strong>Conservations</strong></div>
-                                <ul class="head-menu">
-                                    <li><a href="#">Vrac</a></li>
-                                    <li><a href="#">Sachet</a></li>
-                                    <li><a href="#">Barquette</a></li>
-                                    <li><a href="#"> Conserv</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-head">
-                                <div class="opener"> <i class="icon-i-specifiques"></i><strong>Les spécifiques</strong></div>
-                                <ul class="head-menu">
-                                    <li><a href="#">Vrac</a></li>
-                                    <li><a href="#">Sachet</a></li>
-                                    <li><a href="#">Barquette</a></li>
-                                    <li><a href="#"> Conserv</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-head">
-                                <div class="opener"> <i class="icon-i-sertifications"></i><strong>Certifications</strong></div>
-                                <ul class="head-menu">
-                                    <li><a href="#">Vrac</a></li>
-                                    <li><a href="#">Sachet</a></li>
-                                    <li><a href="#">Barquette</a></li>
-                                    <li><a href="#"> Conserv</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="box-row-wrapper">
-                            <div class="opener"> <i class="icon-i-sertifications"></i><strong>Espèces</strong></div>
-                            <div class="box-row">
-                                <div class="col-body">
-                                    <div class="body-box">
-                                        <i class="icon-caille"> </i>
-                                        <strong class="title">Caille</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-oie"> </i>
-                                        <strong class="title">Oie</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-jeune-coq"> </i>
-                                        <strong class="title">Jeune Coq</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                </div>
-                                <div class="col-body">
-                                    <div class="body-box">
-                                        <i class="icon-canard"> </i>
-                                        <strong class="title">Canard</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-pintade"> </i>
-                                        <strong class="title">Pintade</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-dinde"> </i>
-                                        <strong class="title">Dinde</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                </div>
-                                <div class="col-body">
-                                    <div class="body-box">
-                                        <i class="icon-caneton"> </i>
-                                        <strong class="title">Сaneton</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-poulet"> </i>
-                                        <strong class="title">Poulet</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-dindon"> </i>
-                                        <strong class="title">Dindon</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                </div>
-                                <div class="col-body">
-                                    <div class="body-box">
-                                        <i class="icon-chapon"> </i>
-                                        <strong class="title">Chapon</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-chevreau"> </i>
-                                        <strong class="title">Chevreau</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-poule"> </i>
-                                        <strong class="title">Poule</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                </div>
-                                <div class="col-body">
-                                    <div class="body-box">
-                                        <i class="icon-lapin"> </i>
-                                        <strong class="title">Lapin</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-coq"> </i>
-                                        <strong class="title">Coq</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                    <div class="body-box">
-                                        <i class="icon-viandes"> </i>
-                                        <strong class="title">Viandes, légumeset produits laitiers</strong>
-                                        <a href="#" class="btn btn-thin">Découvrir</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="acc-item">
+                        <a href="#section-element-2">Le bien-être animal</a>
+                    </div>
+                    <div class="acc-item">
+                        <a href="#section-element-3">Respect de la nature</a>
+                    </div>
+                    <div class="acc-item">
+                        <a href="#">Le bien-être animal</a>
                     </div>
                 </div>
-            </section>
+                <section class="default-section text-image-section">
+                    <div class="section-element" id="section-element-1">
+                        <div class="container">
+                            <h2 class="h2 decoration">QUALITé DES <span class="marked-red">PRODUITS</span></h2>
+                            <div class="text-image-box">
+                                <div class="text-holder">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+                                </div>
+                                <div class="img-holder parallax" style="background-image: url(assets/images/parallax3.jpg)"></div>
+                            </div>
+                            <div class="section-element-decor">
+                                <i class="icon-i-lunch"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="section-element" id="section-element-2">
+                        <div class="container">
+                            <h2 class="h2 decoration">Bien-être <span class="marked-red">animal</span></h2>
+                            <div class="text-image-box">
+                                <div class="text-holder">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+                                </div>
+                                <div class="img-holder parallax" style="background-image: url(assets/images/parallax4.jpg)"></div>
+                            </div>
+                            <div class="section-element-decor">
+                                <i class="icon-chapon"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="section-element" id="section-element-3">
+                        <div class="container">
+                            <h2 class="h2 decoration">RESPECT DE LA <span class="marked-red">NATURE</span></h2>
+                            <div class="text-image-box">
+                                <div class="text-holder">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+                                </div>
+                                <div class="img-holder parallax" style="background-image: url(assets/images/gallery-parallax1.jpg)"></div>
+                            </div>
+                            <div class="section-element-decor">
+                                <i class="icon-herbal-spa-treatment-leaves"></i>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
         </main>
     </div>
     <footer id="footer">
