--- a/ldcfood_estampille.html
+++ b/ldcfood_estampille.html
@@ -15,7 +15,7 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 
-<body class="static-header products-page">
+<body class="static-header">
     <div id="wrapper">
         <header id="header">
             <div class="container">
@@ -39,65 +39,253 @@
                         <!--  <li class="current-menu-item"><a href="#">Nos Marques</a></li> -->
                         <li><a href="#">Nos Marques</a></li>
                         <li><a href="#">Nos Gammes</a></li>
-                        <li><a href="#">Estampille CE</a></li>
+                        <li class="current-menu-item"><a href="#">Estampille CE</a></li>
                         <li><a href="#">Nos Engagements</a></li>
                         <li><a href="#" class="btn btn-contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
         </header>
-        <div class="banner" style="background-image:url(assets/images/main-banner.jpg)">
+        <div class="banner" style="background-image:url(assets/images/estampille-banner.jpg)">
             <div class="container">
-                <h1>Estampille CE</h1>
+                <h1>ESTAMPILLE CE</h1>
             </div>
         </div>
         <main id="main">
             <div id="content">
-                <div class="container mark-interactive">
-                    <h2 class="h2 decoration">COMMENT LES DéCHIFFRER</h2>
-                    <div class="interactive-holder">
-                        <div class="mark-holder">
-                            <div class="m-row">
-                                <span class="m-element m-top">FR</span>
-                                <p class="description d-m-top"><span class="marked">Lorem ipsum dolor</span> sit amet, consectetur 
+                <section class="mark-interactive">
+                    <div class="container">
+                        <h2 class="h2 decoration">COMMENT LES DéCHIFFRER</h2>
+                        <div class="interactive-holder">
+                            <div class="mark-content-holder">
+                                <div class="m-row">
+                                    <span class="m-element m-top">FR</span>
+                                    <p class="description d-m-top"><span class="marked">Lorem ipsum dolor</span> sit amet, consectetur 
+                                    adipiscing elit, sed do eiusmod tempor 
+                                    incididunt ut labore.</p>
+                                </div>
+                                <div class="m-row">
+                                    <span class="m-element m-middle-left">44</span>
+                                    <p class="description d-m-middle-left">Lorem ipsum dolor sit amet, consectetur 
+                                    <span class="marked">adipiscing</span> elit, sed do eiusmod tempor 
+                                    incididunt ut labore.</p>
+                                    <span class="m-element m-middle-center">015</span>
+                                    <p class="description d-m-middle-center">Lorem ipsum dolor sit amet, consectetur 
+                                    adipiscing elit, <span class="marked">sed do eiusmod </span>tempor 
+                                    incididunt ut labore.</p>
+                                    <span class="m-element m-middle-right">056</span>
+                                    <p class="description d-m-middle-right">Lorem ipsum dolor sit amet, consectetur 
+                                    adipiscing elit, sed do <span class="marked">eiusmod tempor</span> 
+                                    incididunt ut labore.</p>
+                                </div>
+                                <div class="m-row">
+                                    <span class="m-element m-bottom">CE</span>
+                                    <p class="description d-m-bottom">Lorem ipsum dolor sit amet, consectetur 
+                                    adipiscing elit, sed do eiusmod tempor 
+                                    incididunt ut <span class="marked">labore.</span></p>
+                                </div>
+                                <p class="description default-text">Lorem ipsum dolor sit amet, consectetur 
                                 adipiscing elit, sed do eiusmod tempor 
                                 incididunt ut labore.</p>
                             </div>
-                            <div class="m-row">
-                                <span class="m-element m-middle-left">44</span>
-                                <p class="description d-m-middle-left">Lorem ipsum dolor sit amet, consectetur 
-                                adipiscing elit, sed do eiusmod tempor 
-                                incididunt <span class="marked">ut labore.</span></p>
-                                <span class="m-element m-middle-center">015</span>
-                                <span class="m-element m-middle-right">056</span>
-                            </div>
-                            <div class="m-row">
-                                <span class="m-element m-bottom">CE</span>
-                            </div>
-<!--                             <p class="description default-text">Lorem ipsum dolor sit amet, consectetur 
-                            adipiscing elit, sed do eiusmod tempor 
-                            incididunt ut labore.</p> -->
                         </div>
+                    </div>
+                </section>
+                <section class="default-section img-bg" style="background-image:url(assets/images/estampille-bg.png)">
+                    <div class="container">
+                        <h2 class="h2 decoration">NOS ESTAMPILLES CE</h2>
+                        <div class="text-image-box">
+                            <div class="text-holder">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+                            </div>
+                            <div class="img-holder parallax" style="background-image: url(assets/images/parallax2.jpg)"></div>
+                        </div>
+                        <form action="#" class="search-form">
+                            <button class="btn btn-search"><i class="icon-search"></i></button>
+                            <input type="text" required class="inpt-controll" placeholder="Saisir un code ou un lieu de production">
+                        </form>
+                        <div class="marks-block">
+                            <div class="mark-wrapper">
+                                <div class="mark-content-holder">
+                                    <div class="m-row">
+                                        <span class="m-element m-top">FR</span>
+                                    </div>
+                                    <div class="m-row">
+                                        <span class="m-element m-middle-left">44</span>
+                                        <span class="m-element m-middle-center">015</span>
+                                        <span class="m-element m-middle-right">056</span>
+                                    </div>
+                                    <div class="m-row">
+                                        <span class="m-element m-bottom">CE</span>
+                                    </div>
+                                </div>
+                                <p class="mark-title">Canard</p>
+                            </div>
+                            <div class="mark-wrapper">
+                                <div class="mark-content-holder">
+                                    <div class="m-row">
+                                        <span class="m-element m-top">FR</span>
+                                    </div>
+                                    <div class="m-row">
+                                        <span class="m-element m-middle-left">44</span>
+                                        <span class="m-element m-middle-center">015</span>
+                                        <span class="m-element m-middle-right">056</span>
+                                    </div>
+                                    <div class="m-row">
+                                        <span class="m-element m-bottom">CE</span>
+                                    </div>
+                                </div>
+                                <p class="mark-title">Poulet</p>
+                            </div>
+                            <div class="mark-wrapper">
+                                <div class="mark-content-holder">
+                                    <div class="m-row">
+                                        <span class="m-element m-top">FR</span>
+                                    </div>
+                                    <div class="m-row">
+                                        <span class="m-element m-middle-left">44</span>
+                                        <span class="m-element m-middle-center">015</span>
+                                        <span class="m-element m-middle-right">056</span>
+                                    </div>
+                                    <div class="m-row">
+                                        <span class="m-element m-bottom">CE</span>
+                                    </div>
+                                </div>
+                                <p class="mark-title">Dinde - Canard</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </main>
+    </div>
+    <footer id="footer">
+        <div class="container">
+            <div class="top-row">
+                <div class="logo-holder">
+                    <a href="/" class="logo"><img src="assets/images/logo.svg" width="148" hweight="257"  alt="L.D.C. FOODS"></a>
+                    <span class="copy"><a href="#">LDC Food</a> © 2017 <br> Mentions légales</span>
+                </div>
+                <div class="contact-row">
+                    <h4 class="h4">CONTACT</h4>
+                    <div class="contact-links">
+                        <a href="#" class="video-link">
+                            <div class="video-box">
+                                <video preload="auto" autoplay>
+                                    <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
+                                    <source src="assets/videos/video-gallery/video1.3gp" type="video/3gp">
+                                    <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
+                                    <source src="assets/videos/video-gallery/video1.ogv" type="video/ogg">
+                                </video>
+                            </div>
+                            <div class="descr-box">
+                                <div class="title-text">
+                                    <strong class="name">MAGALIE LORAND</strong>
+                                    <span class="position">Europe</span>
+                                </div>
+                                <span class="btn btn-contact  btn-thin">  
+                                Contactez   
+                                </span>
+                            </div>
+                        </a>
+                        <a href="#" class="video-link">
+                            <div class="video-box">
+                                <video preload="auto" autoplay>
+                                    <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
+                                    <source src="assets/videos/video-gallery/video1.3gp" type="video/3gp">
+                                    <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
+                                    <source src="assets/videos/video-gallery/video1.ogv" type="video/ogg">
+                                </video>
+                            </div>
+                            <div class="descr-box">
+                                <div class="title-text">
+                                    <strong class="name">LAETITIA BODIN</strong>
+                                    <span class="position">Afrique, Océanie</span>
+                                </div>
+                                <span class="btn btn-contact  btn-thin">  
+                                Contactez   
+                                </span>
+                            </div>
+                        </a>
+                        <a href="#" class="video-link">
+                            <div class="video-box">
+                                <video preload="auto" autoplay>
+                                    <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
+                                    <source src="assets/videos/video-gallery/video1.3gp" type="video/3gp">
+                                    <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
+                                    <source src="assets/videos/video-gallery/video1.ogv" type="video/ogg">
+                                </video>
+                            </div>
+                            <div class="descr-box">
+                                <div class="title-text">
+                                    <strong class="name">LYDIA TOUEILLE</strong>
+                                    <span class="position">Asie, Amerique</span>
+                                </div>
+                                <span class="btn btn-contact btn-thin">  
+                                Contactez   
+                                </span>
+                            </div>
+                        </a>
+                        <a href="#" class="video-link">
+                            <div class="video-box">
+                                <video preload="auto" autoplay>
+                                    <source src="assets/videos/video-gallery/video1.webm" type="video/webm">
+                                    <source src="assets/videos/video-gallery/video1.3gp" type="video/3gp">
+                                    <source src="assets/videos/video-gallery/video1.mp4" type="video/mp4">
+                                    <source src="assets/videos/video-gallery/video1.ogv" type="video/ogg">
+                                </video>
+                            </div>
+                            <div class="descr-box">
+                                <div class="title-text">
+                                    <strong class="name">LYDIA TOUEILLE</strong>
+                                    <span class="position">Asie, Amerique</span>
+                                </div>
+                                <span class="btn btn-contact  btn-thin">  
+                                Contactez   
+                                </span>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
-        </main>
-        <div class="container">
-            Eveniet sit cum totam dolorem quae deserunt, doloribus nam. Velit laborum, voluptas suscipit impedit ipsum cupiditate deleniti deserunt odit quia ad? Voluptatem doloribus fugit, esse! Nostrum fugit fuga asperiores sed, iste, hic ad, accusantium mollitia rerum odio dicta ratione obcaecati optio aperiam voluptatem ex voluptates modi dignissimos repellendus cum repellat! Quis tenetur ipsam voluptatum unde alias eius officiis quae illo facilis a dolores repellat ad accusamus harum excepturi sapiente nemo facere sed soluta tempore, nobis impedit eligendi.
+            <div class="bottom-row">
+                <div class="col">
+                    <h4 class="h4">SIEGE</h4>
+                    <div class="info">
+                        <address>
+                            Z.I. du Lay
+                            <br> 56660 Saint-Jean-Brevelay
+                            <br> FRANCE
+                        </address>
+                        <a href="tel:330297603388">Tel : +33(0)2 97 60 33 88</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <h4 class="h4">NEWSLETTER</h4>
+                    <div class="info">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                        <form action="#" class="subscribe-form">
+                            <input type="emil" required placeholder="S’inscrire à la newsletter">
+                            <button>ok</button>
+                        </form>
+                    </div>
+                </div>
+                <div class="col">
+                    <h4 class="h4">BUREAU DE VENTE</h4>
+                    <div class="info">
+                        <address>
+                            7 rue du Paradis
+                            <br> 53000 Laval
+                            <br> FRANCE
+                        </address>
+                        <a href="tel:330243490860">Tel : +33(0)2 43 49 08 60</a>
+                        <a href="tel:330243569426">Fax : +33(0)2 43 53 94 26</a>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="callback">
-        <div class="red-line">
-            <span class="quantity">3</span>
-            <span>Produits sélectionnés</span>
-        </div>
-        <div class="contact-link-field">
-            <span>Besoin d’informations ?</span>
-            <a href="#" class="btn btn-thin">Contactez-nous</a>
-        </div>
-        <span class="m-close">X</span>
-    </div>
-    <div class="mask"></div>
+    </footer>
+    <img id="video-mask-image" src="assets/images/video-mask.png" alt="poolygon mask for video" style="display:none;">
     <script src="assets/js/vendor.min.js" defer></script>
     <script src="assets/js/app.js" defer></script>
 </body>
