--- a/ldcfood_estampille.html
+++ b/ldcfood_estampille.html
@@ -15,7 +15,7 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 
-<body class="static-header">
+<body class="static-header" style="background-image:url(assets/images/estampille-bg.png)">
     <div id="wrapper">
         <header id="header">
             <div class="container">
@@ -36,7 +36,6 @@
                     </div>
                     <ul class="header-nav">
                         <li class="menu-close">&times;</li>
-                        <!--  <li class="current-menu-item"><a href="#">Nos Marques</a></li> -->
                         <li><a href="#">Nos Marques</a></li>
                         <li><a href="#">Nos Gammes</a></li>
                         <li class="current-menu-item"><a href="#">Estampille CE</a></li>
@@ -60,38 +59,51 @@
                             <div class="mark-content-holder">
                                 <div class="m-row">
                                     <span class="m-element m-top">FR</span>
-                                    <p class="description d-m-top"><span class="marked">Lorem ipsum dolor</span> sit amet, consectetur 
-                                    adipiscing elit, sed do eiusmod tempor 
-                                    incididunt ut labore.</p>
                                 </div>
                                 <div class="m-row">
                                     <span class="m-element m-middle-left">44</span>
-                                    <p class="description d-m-middle-left">Lorem ipsum dolor sit amet, consectetur 
-                                    <span class="marked">adipiscing</span> elit, sed do eiusmod tempor 
-                                    incididunt ut labore.</p>
                                     <span class="m-element m-middle-center">015</span>
-                                    <p class="description d-m-middle-center">Lorem ipsum dolor sit amet, consectetur 
-                                    adipiscing elit, <span class="marked">sed do eiusmod </span>tempor 
-                                    incididunt ut labore.</p>
                                     <span class="m-element m-middle-right">056</span>
-                                    <p class="description d-m-middle-right">Lorem ipsum dolor sit amet, consectetur 
-                                    adipiscing elit, sed do <span class="marked">eiusmod tempor</span> 
-                                    incididunt ut labore.</p>
                                 </div>
                                 <div class="m-row">
                                     <span class="m-element m-bottom">CE</span>
-                                    <p class="description d-m-bottom">Lorem ipsum dolor sit amet, consectetur 
-                                    adipiscing elit, sed do eiusmod tempor 
-                                    incididunt ut <span class="marked">labore.</span></p>
                                 </div>
+                            </div>
+                            <div class="description-block">
                                 <p class="description default-text">Lorem ipsum dolor sit amet, consectetur 
                                 adipiscing elit, sed do eiusmod tempor 
+                                incididunt ut labore.
+                                </p>
+                                <p class="description d-m-top"><span class="marked">Lorem ipsum dolor</span> sit amet, consectetur 
+                                adipiscing elit, sed do eiusmod tempor 
+                                incididunt ut labore.<span class="marked">Lorem ipsum dolor</span> sit amet, consectetur 
+                                adipiscing elit, sed do eiusmod tempor 
+                                incididunt ut labore.sit amet, consectetur 
+                                adipiscing elit, sed do eiusmod tempor 
+                                incididunt ut labore.sit amet, consectetur 
+                                adipiscing elit, sed do eiusmod tempor 
+                                incididunt ut labore.
+                                </p>
+                                <p class="description d-m-middle-left">Lorem ipsum dolor sit amet, consectetur 
+                                <span class="marked">adipiscing</span> elit, sed do eiusmod tempor 
+                                incididunt ut labore.
+                                </p>
+                                <p class="description d-m-middle-center">Lorem ipsum dolor sit amet, consectetur 
+                                adipiscing elit, <span class="marked">sed do eiusmod </span>tempor 
+                                incididunt ut labore.
+                                </p>
+                                <p class="description d-m-middle-right">Lorem ipsum dolor sit amet, consectetur 
+                                adipiscing elit, sed do <span class="marked">eiusmod tempor</span> 
                                 incididunt ut labore.</p>
+                                <p class="description d-m-bottom">Lorem ipsum dolor sit amet, consectetur 
+                                adipiscing elit, sed do eiusmod tempor 
+                                incididunt ut <span class="marked">labore.</span>
+                                </p>
                             </div>
                         </div>
                     </div>
                 </section>
-                <section class="default-section img-bg" style="background-image:url(assets/images/estampille-bg.png)">
+                <section class="default-section img-bg">
                     <div class="container">
                         <h2 class="h2 decoration">NOS ESTAMPILLES CE</h2>
                         <div class="text-image-box">
@@ -163,7 +175,7 @@
         <div class="container">
             <div class="top-row">
                 <div class="logo-holder">
-                    <a href="/" class="logo"><img src="assets/images/logo.svg" width="148" hweight="257"  alt="L.D.C. FOODS"></a>
+                    <a href="/" class="logo"><img src="assets/images/logo.svg" width="148" height="257"  alt="L.D.C. FOODS"></a>
                     <span class="copy"><a href="#">LDC Food</a> © 2017 <br> Mentions légales</span>
                 </div>
                 <div class="contact-row">
@@ -265,7 +277,7 @@
                     <div class="info">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
                         <form action="#" class="subscribe-form">
-                            <input type="emil" required placeholder="S’inscrire à la newsletter">
+                            <input type="email" required placeholder="S’inscrire à la newsletter">
                             <button>ok</button>
                         </form>
                     </div>
