--- a/ldcfood_contact.html
+++ b/ldcfood_contact.html
@@ -83,7 +83,7 @@
                                     <input type="email" class="form-control" placeholder="E mail*:" required>
                                 </li>
                                 <li>
-                                    <input type="text" class="form-control" placeholder="Téléphone*:" required>
+                                    <input type="tel" class="form-control" placeholder="Téléphone*:" required>
                                 </li>
                             </ul>
                             <div class="f-list-title">
@@ -96,7 +96,7 @@
                                     <span class="del-btn"></span>
                                 </li>
                                 <li>
-                                    <input type="text" class="favoris-option" value="Poulet - Haut de cuisse">
+                                    <input type="text" class="favoris-option" value="Poulet - Haut de cuisse Poulet">
                                     <span class="del-btn"></span>
                                 </li>
                                 <li>
